--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,6 +33,8 @@ ul{
 }
 
 a{  
+    font-family: 'Rowdies', sans-serif;
+    font-weight: bold;
     font-size: 14px;
     margin: 10px;
     color: white;
