--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ header  p{
     font-size: 30px;
     font-weight:bold;
     font-weight:900;
-    text-shadow: 1px 1px 10px red;
+    text-shadow: 1px 1px 5px black;
 }
 
 
