--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,200;0,300;0,500;0,700;0,900;1,200;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
 body{
-    background-image: url('/imagens/fundopapel.jpg');
+    background-image: url('../imagens/fundopapel.jpg');
     font-family: 'Noto Sans', sans-serif;
     margin: 0px;
 
